[package]
name = "frontend-utils-wasm"
description = "WASM utilities for using in frontend"
version = "6.0.0"
authors = [ "Arnaud Rocher <arnaud.roche3@gmail.com>" ]
repository = "https://github.com/cailloumajor/frontend-utils-wasm"
license = "MIT"
edition = "2024"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
csscolorparser = "0.7"
plotters-canvas = "0.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "2.0"
# Should be the version supported by the current version of wasmbuild.
wasm-bindgen = "=0.2.102"

[dependencies.plotters]
version = "0.3"
default-features = false
features = [ "datetime" ]

[dependencies.tsify]
version = "0.5"
default-features = false
features = [ "js" ]

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "Window",
]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
