[package]
name = "frontend-utils-wasm"
description = "WASM utilities for using in frontend"
version = "6.0.3"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
repository = "https://github.com/cailloumajor/frontend-utils-wasm"
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
csscolorparser = "0.8.1"
plotters-canvas = "0.3.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
# Must be the version supported by the current version of `wasmbuild`.
wasm-bindgen = "=0.2.106"

[dependencies.plotters]
version = "0.3.7"
default-features = false
features = ["datetime"]

[dependencies.tsify]
version = "0.5.6"
default-features = false
features = ["js"]

[dependencies.web-sys]
# Must be the version supported by the current version of `wasmbuild`.
version = "=0.3.83"
features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "Window",
]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"
