[package]
name = "frontend-utils-wasm"
version = "6.0.6"
edition.workspace = true
description = "WASM utilities for using in frontend"
publish.workspace = true

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
csscolorparser = "0.8.1"
plotters-canvas = "0.3.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
wasm-bindgen = "=0.2.121"

[dependencies.plotters]
version = "0.3.7"
default-features = false
features = ["datetime"]

[dependencies.tsify]
version = "0.5.6"
default-features = false
features = ["js"]

[dependencies.web-sys]
version = "=0.3.98"
features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Element",
  "Event",
  "HtmlCanvasElement",
  "Window",
]

[profile.release]
opt-level = "z"
lto = true
incremental = true
codegen-units = 1
