[package]
name = "xtask"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
base64 = "0.22.1"
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["derive"] }
duct = "1.1.1"
escargot = "0.5.15"
flate2 = "1.1.9"
wasm-bindgen-cli-support = "=0.2.120"
